styles.css
body {
    font-family: 'Courier New', monospace;
    background: #0F0A3C; /* Dark Blue */
    font-size: 24px;
    color: #2AFFDF; /* Bright Teal */
    margin: 0;
    padding: 0;
}

header, footer {
    background: #000080; /* Neon Purple */
    padding: 10px 0;
    text-align: center;
}
.container {
    width: 80%;
    margin: 0 auto;
    padding: 20px 0;
}

a {
    color: #FFA500;
    font-size: 24px;
}

a:hover {
    background-color: #FD3A69; /* Neon Pink */
}

a.active {
    color: #00FF00; /* Neon Pink */
}
.description {
    display: none;
    
    background: linear-gradient(to bottom, #0F0A3C 20%, #03A9F4 80%);
    padding: 10px;
}
input[type="checkbox"]:checked ~ .description {
    display: block;
    
}
h1, h2, p {
    font-size: 24px;
}
label {
    font-size: 20px;
}
.toggle {
    position: absolute;
    left: -9999px;
}
.toggle + label {
    cursor: pointer;
    transition: color 0.3s ease;
}
.toggle + label:hover {
    color: #FFFF00;
}
.toggle:not(:checked) ~ .description {
    display: none;
}
img {
    width: 50%;
    height: auto;
}

@media only screen and (max-width: 600px) {
    a {
        color: #FFA500;
        font-size: 20px;
    }
    h1, h2, p {
        font-size: 22px;
    }
    label {
        font-size: 20px;
    }
    img {
        width: 80%;
        height: auto;
    }
}

@media only screen and (max-width: 400px) {
    a {
        color: #FFA500;
        font-size: 16px;
    }
    h1, h2, p {
        font-size: 16px;
    }
    label {
        font-size: 14px;
    }
    body {
        font-size: 14px;
    }
    img {
        width: 80%;
        height: auto;
    }
}

